CORE-547 - Fixed horizontal container child items from having left / right padding on smaller screens

--- a/css/containers.less
+++ b/css/containers.less
@@ -81,7 +81,8 @@ body {
     .mw-bs {
 
         .mw-horizontal_flow > * {
-            padding-left: 0;
+            padding-left: 0 !important;
+            padding-right: 0 !important;
         }
 
     }
